@@ -40,7 +40,8 @@ final class ModuleOperations
 	 * @access private
 	 * @internal
 	 */
-	protected $cmssystemmodules =  array( 'AdminSearch', 'CMSContentManager', 'DesignManager', 'FileManager', 'ModuleManager', 'Search','News', 'MicroTiny', 'Navigator', 'CmsJobManager', 'FilePicker' );
+	protected $cmssystemmodules =  [ 'AdminLog', 'AdminSearch', 'CMSContentManager', 'DesignManager', 'FileManager', 'ModuleManager', 'Search','News', 'MicroTiny',
+                                     'Navigator', 'CmsJobManager', 'FilePicker' ];
 
 	/**
 	 * @ignore
